src/stylesheets/styles.scss
@import "_variables.scss";

body {
	background-color: white;
	font-family: Arial, Helvetica, sans-serif;
}

#addRecipeButton {
	border: 1px solid $blue-btn;
	background-color: $blue-btn;
	color: white;
	padding: 7px 20px;
	border-radius: 5px;
	font-weight: bold;
}

#addRecipeButton:hover {
	cursor: pointer;
	background-color: white;
	color: $blue-btn;
}

.recipesContainer {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.recipes {
	border: 1px solid black;
	padding: 10px;
	margin: 20px;
	width: 280px;
	box-shadow: 3px 5px 5px $light-gray;
	min-width: 280px;
	// position: relative;

	.recipeHeader {
		display: flex;
		justify-content: space-between;

		.recipeHeaderText {
			display: flex;
			align-items: center;
		}

		.recipeTitles {
			font-size: larger;
		}

		.deleteRecipeButton {
			display: flex;
			align-items: flex-start;
			border: none;
			color: $bright-salmon;
			background-color: white;
		}
		.deleteRecipeButton:hover {
			color: red;
			cursor: pointer;
		}

		.recipeLinks {
			font-size: medium;
			color: $primary-blue-gray;
			font-style: italic;
			padding-left: 5px;
		}
		.recipeLinks:hover {
			color: $secondary-black;
		}
	}

	.recipeTitles,
	.ingredientsLabel,
	.notesLabel,
	.rating {
		font-weight: bold;
		font-size: medium;
		margin: 5px;
	}

	.ingredientLists {
		margin-top: 0px;
		margin-bottom: 10px;
	}

	.ingredients {
		font-size: small;
	}

	.notes {
		font-size: small;
		margin: 5px 10px 0px 5px;
	}

	.recipeCardButtons {
		display: flex;
		justify-content: space-around;
		// position: absolute;
		// bottom: 10px;
		// right: 20%;
		// left: 20%;
	}

	.editButton {
		border: 1px solid $blue-btn;
		border-radius: 5px;
		background: white;
		color: $blue-btn;
		padding: 3px 10px;
	}
	.editButton:hover {
		cursor: pointer;
	}

	.addButton {
		border: 1px solid $blue-btn;
		border-radius: 5px;
		background: $blue-btn;
		color: white;
		padding: 3px 10px;
	}
	.addButton:hover {
		cursor: pointer;
	}

	.ratingLine {
		display: flex;
		align-items: center;
	}
}

.addRecipePopup,
.editRecipePopup {
	padding: 10px;
	display: grid;
	grid-template-columns: 1fr 2fr;

	button {
		width: 100px;
		margin: 10px;
		background-color: $blue-btn;
		color: white;
		font-weight: bold;
		border: 1px solid $blue-btn;
		border-radius: 5px;
		padding: 7px;
	}

	button:hover {
		cursor: pointer;
		background-color: white;
		color: $blue-btn;
	}
}

.popup-box {
	position: fixed;
	background: #00000050;
	width: 100%;
	height: 100vh;
	top: 0;
	left: 0;

	.inputTitle {
		color: $blue-btn;
	}

	.inputLabels {
		font-weight: bold;
		margin-top: 10px;
	}

	.inputs {
		margin-top: 5px;
	}

	// #title,
	// #ingredients {
	// 	font-style: italic;
	// }
}

.box {
	position: relative;
	width: 70%;
	margin: 0 auto;
	height: auto;
	max-height: 70vh;
	margin-top: calc(100vh - 85vh - 20px);
	background: #fff;
	border-radius: 4px;
	padding: 20px;
	border: 1px solid #999;
	overflow: auto;
}

.close-icon {
	content: "x";
	cursor: pointer;
	position: fixed;
	right: calc(15% - 30px);
	top: calc(100vh - 85vh - 33px);
	background: #ededed;
	width: 25px;
	height: 25px;
	border-radius: 50%;
	line-height: 20px;
	text-align: center;
	border: 1px solid #999;
	font-size: 20px;
}

